--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
     "reactstrap": "^9.2.2",
     "web-vitals": "^2.1.4"
   },
